# CapstoneRECLAIM

./: .gitignore  README.md  sync.sh
diagrams/: prototype_node_graph.drawio  teensy_firmware_architecture.drawio
navigation_simulation/: index.html  package.json
navigation_simulation/src/: App.jsx
operator_dashboard/: index.html  package.json
operator_dashboard/src/: App.jsx  NavigationSimulation.jsx  OperatorDashboard.jsx  index.css
reclaim_ws/src/reclaim_arm_moveit_config/: CMakeLists.txt  package.xml
reclaim_ws/src/reclaim_arm_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  pick_and_place.yaml  ros2_controllers.yaml
reclaim_ws/src/reclaim_arm_moveit_config/launch/: move_group.launch.py
reclaim_ws/src/reclaim_arm_moveit_config/scripts/: bin_cycle.py  bin_cycle_staggered.py  goto_cam_xyz.py  goto_xyz.py  load_planning_scene.py  pick_and_place.py  verify_camera_transform.py
reclaim_ws/src/reclaim_arm_moveit_config/srdf/: reclaim_arm.srdf
reclaim_ws/src/reclaim_bringup/: package.xml  setup.cfg  setup.py
reclaim_ws/src/reclaim_bringup/config/: waste_tracker.yaml
reclaim_ws/src/reclaim_bringup/launch/: full_system.launch.py  waste_tracker.launch.py
reclaim_ws/src/reclaim_bringup/reclaim_bringup/: camera_bridge.py  waste_tracker.py  waste_tracker_trt.py  waste_tracker_v2.py
reclaim_ws/src/reclaim_control/: package.xml  setup.cfg  setup.py
reclaim_ws/src/reclaim_control/config/: poses.yaml  teensy_bridge.yaml  view_arm.rviz
reclaim_ws/src/reclaim_control/launch/: teensy_bridge.launch.py  view_arm.launch.py
reclaim_ws/src/reclaim_control/reclaim_control/: teensy_bridge.py
reclaim_ws/src/reclaim_control/scripts/: manual_teach.py  pose_runner.py  pose_teacher.py  requirements.txt  teensy_client.py
reclaim_ws/src/reclaim_control/urdf/: reclaim_arm.urdf
reclaim_ws/src/reclaim_navigation/: package.xml  setup.cfg  setup.py
reclaim_ws/src/reclaim_navigation/config/: costmap_common.yaml  global_costmap.yaml  local_costmap.yaml  nav2_params.yaml  rplidar_a1m8.yaml  slam_toolbox_params.yaml
reclaim_ws/src/reclaim_navigation/launch/: full_drive.launch.py  nav_only.launch.py  navigation.launch.py  rplidar.launch.py  (+1 more)
reclaim_ws/src/reclaim_servo_hardware/: CMakeLists.txt  package.xml  reclaim_servo_hardware.xml
reclaim_ws/src/reclaim_servo_hardware/include/reclaim_servo_hardware/: servo_hardware_interface.hpp
reclaim_ws/src/reclaim_servo_hardware/src/: servo_hardware_interface.cpp
(+13 files in other folders)
