<?xml version="1.0"?>
<package format="3">
  <name>reclaim_servo_hardware</name>
  <version>0.1.0</version>
  <description>ros2_control hardware interface for RECLAIM 4-DOF servo arm via Teensy serial</description>
  <maintainer email="issaa71@github.com">Issa Ahmed</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
